網站建置中

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: |
   資源回收 壓克力回收 PC板 壓克力廣告招牌回收 各式塑料回收
   廢塑膠回收
   志嘉企業 新北市樹林區東和街40之2號
-owner: GY54088 # or company name
+owner: 志嘉企業 # or company name
 first_published: 2019 # if migrating another site, the year of your first publish
 email: GY54088TW@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
