--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 志嘉企業 | 壓克力、PC板、各式塑料回收
 email: GY54088TW@gmail.com
-description: > 資源回收 壓克力回收 PC板 壓克力廣告招牌回收 各式塑料回收
+description: 資源回收 壓克力回收 PC板 壓克力廣告招牌回收 各式塑料回收
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://GY54088.com.tw" # the base hostname & protocol for your site
 
